--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
     "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -26,9 +28,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
-  }
+  ]
 }
